[workspace]
members = [
    "src/decl",
    "src/decl/ffi",
    "src/facts",
    "src/facts/ffi",
    "src/hhbc/cargo/string_utils",
    "src/parser",
    "src/parser/cargo/core_types",
    "src/parser/cargo/errors",
    "src/parser/cargo/errors/ffi",
    "src/parser/cargo/lowerer",
    "src/parser/cargo/lowerer/ffi",
    "src/parser/ffi",
    "src/utils/escaper",
    "src/utils/ocamlpool_rust",
    "test",
]
