[workspace]
members = [
    "src/decl",
    "src/decl/ffi",
    "src/facts",
    "src/facts/ffi",
    "src/hhbc/cargo/string_utils",
    "src/name_index/sqlite",
    "src/name_index",
    "src/parser",
    "src/parser/cargo/bench",
    "src/parser/cargo/core_types",
    "src/parser/cargo/errors",
    "src/parser/cargo/errors/ffi",
    "src/parser/cargo/lowerer",
    "src/parser/ffi",
    "src/utils/escaper",
    "src/utils/ocamlpool_rust",
    "src/utils/stack_limit",
    "src/hh_codegen",
    "test",
]
