(alias
  (name exe)
  (deps
    src/hh_server.exe
    src/hh_client.exe
    src/hh_single_type_check.exe
    src/hackfmt.exe
    src/hh_parse.exe
    src/hh_single_compile.exe
    src/artifact_store/artifact_store_bin.exe
    src/facebook/everstore/everstore_bin.exe
    src/facebook/hh_fanout/hh_fanout.exe
    src/facebook/hh_gi/hh_gi.exe
    src/facebook/hh_lite/hh_lite.exe
    src/facebook/hh_replay/hh_replay.exe
    test/facebook/ci/ci_util_tests.exe
    test/facebook/recli/recli_test.exe
    test/facebook/remote/workerSyncStoreTests.exe
    test/facebook/remote/remoteWorkerTests.exe
    test/facebook/remote/typing_check_service_tests.exe
    test/facebook/remote/sandcastleJobRunnerTests.exe
    ))

(alias
  (name hh)
  (deps
    src/hh_server.exe
    src/hh_client.exe))

(alias
  (name debug)
  (deps
    src/hh_server.bc
    src/hh_client.bc
    src/hh_single_type_check.bc
    src/hackfmt.bc
    src/hh_parse.bc
    src/hh_single_compile.bc))

(alias
  (name all-hack)
  (deps (alias exe) (alias debug)))
