(alias
  (name exe)
  (deps
    src/hh_server.exe
    src/hh_client.exe
    src/hh_single_type_check.exe
    src/hackfmt.exe
    src/hh_parse.exe
    src/hh_single_compile.exe
    ))

(alias
  (name hh)
  (deps
    src/hh_server.exe
    src/hh_client.exe))

(alias
  (name debug)
  (deps
    src/hh_server.bc
    src/hh_client.bc
    src/hh_single_type_check.bc
    src/hackfmt.bc
    src/hh_parse.bc
    src/hh_single_compile.bc))

(alias
  (name all-hack)
  (deps (alias exe) (alias debug)))
