(alias
  (name exe)
  (deps
    src/hackfmt.exe
    src/hh_client.exe
    src/hh_fanout/hh_fanout.exe
    src/hh_parse.exe
    src/hh_server.exe
    src/hh_single_compile.exe
    src/hh_single_type_check.exe
    ))

(alias
  (name hh)
  (deps
    src/hh_server.exe
    src/hh_client.exe))

(alias
  (name single)
  (deps
    src/hh_single_type_check.exe
    src/hh_single_compile.exe
    ))

(alias
  (name debug-single)
  (deps
    src/hh_single_type_check.bc
    src/hh_single_compile.bc
    ))

(alias
  (name debug)
  (deps
    src/hackfmt.bc
    src/hh_client.bc
    src/hh_fanout/hh_fanout.bc
    src/hh_parse.bc
    src/hh_server.bc
    src/hh_single_compile.bc
    src/hh_single_type_check.bc
    ))

(alias
  (name all-hack)
  (deps (alias exe) (alias debug)))
